<resources>
    <string name="app_name">牛哇直播</string>
    <string name="app_name_short">牛哇</string>
    <string name="coin">牛币</string>
    <string name="coin1">牛币</string>
    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="square">广场</string>
    <string name="app_tip">apptip</string>
    <string name="pay_result_callback_msg">result callback</string>
    <string name="tv_login_label1">请选择登录方式</string>
    <string name="tv_loginbyphone">手机号登录/注册</string>
    <string name="tv_login_label2">使用即为同意</string>
    <string name="tv_login_xieyi">《注册协议》</string>
    <string name="tv_xieyi_content">协议内容</string>
    <string name="tv_xieyi_title">服务条款</string>
    <string name="tv_loginbyphone_title">登录</string>
    <string name="tv_loginbyphone_forgetpwd">忘记密码</string>
    <string name="edit_pwd_hint">请输入密码</string>
    <string name="edit_phone_hint">请输入手机号</string>
    <string name="tv_loginbyphone_register">注册</string>
    <string name="btn_register_code">验证码</string>
    <string name="edit_code_hint">请输入验证码</string>
    <string name="btn_register">注 册</string>
    <string name="btn_login">确 定</string>
    <string name="tv_register_title">注册</string>
    <string name="tv_forgetpwd_title">找回密码</string>
    <string name="btn_forgetpwd">确 定</string>
    <string name="edit_forget_phone">请输入手机号</string>
    <string name="edit_forget_newpwd">请输入新密码</string>
    <string name="edit_forget_code">请输入验证码</string>
    <string name="edit_forget_getcode">获取验证码</string>
    <string name="tv_crop_title">裁剪头像</string>
    <string name="btn_selectpic">选择图片</string>
    <string name="btn_done">完成</string>
    <string name="tv_own_fengcai">贡献榜</string>
    <string name="tv_own_chongzhi">充值</string>
    <string name="tv_own_duihuan">兑换</string>
    <string name="tv_own_fabu">发布</string>
    <string name="tv_own_level">等级</string>
    <string name="btn_follow">关注</string>
    <string name="tv_welcome_in">进入直播</string>
    <string name="btn_share_cancel">取消</string>

    <string name="live_type_pay">付费</string>
    <string name="live_type_private">私密</string>
    <string name="live_type_pass">密码</string>
    <string name="live_type_pub">公开</string>
    <string name="live_type">请选择直播类型</string>
    <string name="caozuo">操作</string>
    <string name="caozuo_jubao">举报</string>
    <string name="caozuo_lianmai">连麦</string>
    <string name="caozuo_changkong">设为场控</string>
    <string name="caozuo_lahei">拉黑</string>
    <string name="caozuo_jinyan">禁言</string>

    <string name="user_center">个人中心</string>
    <string name="community">互动社区</string>
    <string name="login_or_register">登录/注册</string>
    <string name="hot_recommend">热门推荐</string>

    <string name="my_reward">我的奖品</string>
    <string name="add_score_toast">牛币+%s，请继续参与互动获取更多牛币哦！</string>
    <string name="already_verify">已认证</string>

    <string name="upload_verification">上传身份证明</string>
    <string name="upload_verification_tip">（必填）</string>
    <string name="upload_positive">上传身份证正面</string>
    <string name="upload_negative">上传身份证反面</string>
    <string name="upload_positive_holding">上传手持身份证照片</string>
    <string name="upload_size_tip">图片大小不得超过2M</string>
    <string name="upload_choose_tip">请选择照片</string>
    <string name="commit">提交</string>

    <string name="percents">%s%%</string>
    <string name="video_not_available">视频直播暂未开放</string>

</resources>
