<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/transparent_black"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_type"
            android:textColor="@color/white"
            android:textSize="14dp"/>


    </LinearLayout>

    <View
        android:layout_height="0.5dp"
        android:background="@color/white"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_live_public"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/type_public"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/live_type_pub"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_live_pay"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/type_pay"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/live_type_pay"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_live_private"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/type_private"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/live_type_private"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_live_pass"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/type_pass"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/live_type_pass"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_height="0.5dp"
        android:background="@color/white"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:background="@color/transparent"
        android:text="@string/btn_share_cancel"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>