<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/transparent_black"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/caozuo"
            android:textColor="@color/white"
            android:textSize="14dp"/>


    </LinearLayout>

    <View
        android:layout_height="0.5dp"
        android:background="@color/white"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/jubao_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_live_jubao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caozuo_jubao"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/caozuo_jubao"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lianmai_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_live_lianmai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caozuo_lianmai"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/caozuo_lianmai"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/changkong_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_live_changkong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caozuo_changkong"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/caozuo_changkong"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/jinyan_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_live_jinyan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caozuo_jinyan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/caozuo_jinyan"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lahei_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_live_lahei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wechatqqlive"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/caozuo_lahei"/>
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_height="0.5dp"
        android:background="@color/white"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/caozuo_cancel"
        android:background="@color/transparent"
        android:text="@string/btn_share_cancel"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>