<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tv.niuwa.live.own.authorize.VerificationActivity">

    <include layout="@layout/layout_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_size_12sp"
            android:text="@string/upload_verification"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12sp"
            android:textColor="@color/lcim_commom_read"
            android:text="@string/upload_verification_tip"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="273dp"
                android:layout_height="143dp"
                android:layout_marginTop="28dp"
                android:id="@+id/positiveButton"
                android:background="@drawable/img_xu">
                <ImageView
                    android:layout_width="76dp"
                    android:layout_height="55dp"
                    android:src="@drawable/img_zheng"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20.5dp"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_9e9e9e"
                    android:text="@string/upload_positive"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:id="@+id/photo1"/>

                <ImageView
                    android:layout_width="34.5dp"
                    android:layout_height="34dp"
                    android:src="@drawable/img_gou"
                    android:id="@+id/positiveFilled"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="273dp"
                android:layout_height="143dp"
                android:id="@+id/negativeButton"
                android:layout_marginTop="19.5dp"
                android:background="@drawable/img_xu">
                <ImageView
                    android:layout_width="76dp"
                    android:layout_height="55dp"
                    android:src="@drawable/img_fan"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20.5dp"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_9e9e9e"
                    android:text="@string/upload_negative"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:id="@+id/photo2"/>
                <ImageView
                    android:layout_width="34.5dp"
                    android:layout_height="34dp"
                    android:src="@drawable/img_gou"
                    android:id="@+id/negativeFilled"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="273dp"
                android:layout_height="143dp"
                android:id="@+id/positiveHoldingButton"
                android:layout_marginTop="19.5dp"
                android:background="@drawable/img_xu">
                <ImageView
                    android:layout_width="76dp"
                    android:layout_height="55dp"
                    android:src="@drawable/img_shou"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20.5dp"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_9e9e9e"
                    android:text="@string/upload_positive_holding"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:id="@+id/photo3"/>
                <ImageView
                    android:layout_width="34.5dp"
                    android:layout_height="34dp"
                    android:src="@drawable/img_gou"
                    android:id="@+id/positiveHoldingFilled"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <TextView
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/lcim_commom_read"
                android:layout_marginTop="10dp"
                android:text="@string/upload_size_tip"
                android:textSize="@dimen/text_size_10sp"
                />

            <TextView
                android:layout_width="244dp"
                android:layout_height="32dp"
                android:id="@+id/commit"
                android:background="@drawable/btn_tijiao"
                android:text="@string/commit"
                android:gravity="center"
                android:layout_marginBottom="29.5dp"
                android:textSize="@dimen/text_size_15sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
