<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="tv.niuwa.live.login.LoginByPhoneActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="40dp"
                android:layout_height="55dp"
                android:scaleType="centerInside"
                android:src="@drawable/middle_butto_return_norma1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_loginbyphone_title"
            android:textColor="@color/tv_xieyi_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_loginbyphone_register"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/tv_loginbyphone_register"
            android:textColor="@color/tv_xieyi_title"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_white_5radius"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/input_phone" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey"></View>

            <EditText
                android:id="@+id/edit_input_mobile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/edit_phone_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:singleLine="true"
                android:textSize="17sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_white_5radius"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:scaleType="centerInside"
                android:src="@drawable/input_code" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/grey"></View>

            <EditText
                android:id="@+id/edit_input_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/edit_pwd_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/iv_showpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/zhibo_cancel_n" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/tv_loginbyphone_forgetpwd"
                android:textSize="15sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_pink2white_30radius"
            android:text="@string/btn_login"
            android:textColor="@drawable/selector_pink2white_30radius"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
