<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include layout="@layout/layout_top"/>-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/player_surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/mengban" />

        <ImageView
            android:id="@+id/login_bg_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tv_logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="84dp"
                android:src="@mipmap/icon_xiupai_live" />

            <TextView
                android:layout_below="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_marginBottom="53dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/tv_login_label1"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/linear_login_weichat_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/wechat_logo" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_login_qq_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/qq_logo" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_login_sina_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/weibo_logo" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_loginbyphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_loginbyphone"
                    android:autoLink="all"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_login_label2"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_xieyi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_login_xieyi"
                        android:textColor="@color/tv_login_xieyi"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>

</LinearLayout>
